2002-02-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* THANKS (Contributions): Add Arcady Genkin.

2002-02-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* TMDA 0.46 is released.

2002-01-26  Jason R. Mastaler  <jason@mastaler.com>

	* TMDA 0.45 is released.

2002-01-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.44 is released.

	* COPYRIGHT: Update for 2002.

2001-12-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.43 is released.

2001-12-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* THANKS (Contributions): Add Brian Lalor.

2001-12-02  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.42 is released.

2001-11-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* THANKS (Contributions): Add Lou Hevly and Francisco Sam
	Castillo.
	
2001-11-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: Removed TODO.
	TMDA 0.41 is released.

2001-11-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.40 is released.

2001-11-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* INSTALL: Move success reporting info to config-server.html.

2001-10-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.39 is released.

2001-10-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* CRYPTO: Added keyword address description.

2001-10-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.38 is released.

2001-10-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: The FAQ is now in HTML within htdocs.

2001-10-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* INSTALL: htdocs replaces doc.

	* THANKS (Contributions): Add Matt Armstrong.

2001-09-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: Update summary description to better reflect the current