@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Sat Feb  9 19:04:01 2002 -->
+<!-- Fri Feb 15 11:21:51 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -150,8 +150,11 @@ Debian Linux Package</a><br><br>
 <li><a href="http://www.gentoo.org/cgi-bin/viewcvs.cgi/gentoo-x86/net-mail/tmda/" 
 TARGET="Resource Window">Gentoo Linux Package</a><br><br>
 
+<li>TMDA is part of <a href="http://www.mandrakelinux.com/" 
+TARGET="Resource Window">Mandrake Linux</a> Contribs<br><br>
+
 <li>If you run FreeBSD, TMDA is part of the "ports" collection
-<a href="http://www.freebsd.org/cgi/ports.cgi?query=tmda&stype=name" TARGET="Resource Window">(mail/tmda)</a>
+<a href="http://www.freebsd.org/cgi/cvsweb.cgi/ports/mail/tmda/" TARGET="Resource Window">(mail/tmda)</a>
 <br><br>
 </ul>
 
