@@ -1,3 +1,8 @@
+2002-02-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* download.ht: Update FreeBSD port URL; link to Mandrake Linux
+	Contribs.
+	
 2002-02-14  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* faq.ht: Update pending queue question to use tmda-pending rather
