@@ -1,3 +1,7 @@
+2002-02-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* THANKS (Contributions): Add Vincent Danen.
+
 2002-02-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* THANKS (Contributions): Add Arcady Genkin.
